품목 선택 페이지 화면 구성 완료

--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,21 @@
-body {
-	background-color: yellow;
+@import (once) "var";
+
+//*-- 상단바 --*//
+nav.nav-top {
+    background-color: #fff;
+    box-shadow: none !important;
+  
+    .button-collapse {
+    	left: 20px;
+    	i {
+    		font-size: 2rem !important;
+    	}
+    }
+    a {
+        color: @primary;
+    }
+}
+
+.select-item {
+	box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.02), 0 2px 10px 0 rgba(0, 0, 0, 0.05) !important;	
 }
