--- a/less/index.less
+++ b/less/index.less
@@ -16,6 +16,20 @@ nav.nav-top {
     }
 }
 
-.select-item {
+.tab-menu {
 	box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.02), 0 2px 10px 0 rgba(0, 0, 0, 0.05) !important;	
+	
+	.tabs {
+		height: 100%;
+
+		.tab {
+			height: 100%;
+		}
+	}
+}
+
+.contents {
+	img {
+		width: 100%;
+	}
 }
