--- a/less/index.less
+++ b/less/index.less
@@ -30,6 +30,7 @@ nav.nav-top {
     }
 }
 
+//*-- 탭메뉴 --*//
 .tab-menu {
 	box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.02), 0 2px 10px 0 rgba(0, 0, 0, 0.05) !important;	
 	
@@ -38,6 +39,17 @@ nav.nav-top {
 
 		.tab {
 			height: 100%;
+			
+			a {
+				img {
+					width: 30px;
+					height: 30px;
+					margin: 10px 0 -25px 0px;
+				}
+				// div {
+
+				// }
+			}
 		}
 	}
 }
