--- a/css/index.css
+++ b/css/index.css
@@ -13,13 +13,19 @@ nav.nav-top {
   background-color: #fff;
   box-shadow: none !important;
 }
-nav.nav-top .button-collapse {
+nav.nav-top .nav-wrapper .brand-logo {
+  font-size: 2.6rem;
+}
+nav.nav-top .nav-wrapper .brand-logo img {
+  width: 150px;
+}
+nav.nav-top .nav-wrapper .button-collapse {
   left: 20px;
 }
-nav.nav-top .button-collapse i {
-  font-size: 2rem !important;
+nav.nav-top .nav-wrapper .button-collapse i {
+  font-size: 1.5rem !important;
 }
-nav.nav-top a {
+nav.nav-top .nav-wrapper a {
   color: #5ddbdb;
 }
 .tab-menu {
@@ -34,10 +40,18 @@ nav.nav-top a {
 .tab-menu .tabs .tab a img {
   width: 30px;
   height: 30px;
-  margin: 10px 0 -25px 0px;
+  margin: 0 0 -25px 0px;
+}
+.tab-menu .tabs .tab a div {
+  color: #666666;
+  font-size: 14px;
+}
+.tab-menu .tabs .indicator {
+  background-color: #5ddbdb;
 }
 .contents-container img {
   width: 100%;
+  height: auto;
 }
 .contents-container ul li .col .col {
   padding-left: 0;
