--- a/less/index.less
+++ b/less/index.less
@@ -19,15 +19,26 @@ nav.nav-top {
     background-color: #fff;
     box-shadow: none !important;
   
-    .button-collapse {
-    	left: 20px;
-    	i {
-    		font-size: 2rem !important;
-    	}
-    }
-    a {
-        color: @primary;
-    }
+  	.nav-wrapper {
+		.brand-logo {
+			font-size: 2.6rem;
+
+			img {
+				width: 150px;
+			}
+		}
+
+	    .button-collapse {
+	    	left: 20px;
+	    	i {
+	    		font-size: 1.5rem !important;
+	    	}
+	    }
+	    a {
+	        color: @primary;
+	    }
+  		
+  	}
 }
 
 //*-- 탭메뉴 --*//
@@ -36,20 +47,25 @@ nav.nav-top {
 	
 	.tabs {
 		height: 100%;
-
+		
 		.tab {
 			height: 100%;
-			
+
 			a {
 				img {
 					width: 30px;
 					height: 30px;
-					margin: 10px 0 -25px 0px;
+					margin: 0 0 -25px 0px;
 				}
-				// div {
-
-				// }
+				div {
+					color: @font-primary;
+					font-size: 14px;
+				}
 			}
+		}
+
+		.indicator {
+			background-color: @primary;
 		}
 	}
 }
@@ -57,6 +73,7 @@ nav.nav-top {
 .contents-container {
 	img {
 		width: 100%;
+		height: auto;
 	}
 
 	ul li .col .col {
