주문서 작성 페이지 레이아웃

--- a/less/index.less
+++ b/less/index.less
@@ -70,6 +70,7 @@ nav.nav-top {
 	}
 }
 
+//*-- item list --*//
 .contents-container {
 	img {
 		width: 100%;
@@ -81,6 +82,7 @@ nav.nav-top {
 	}
 }
 
+//*-- item quantity changer --*//
 .qty-box {
 	border: 1px solid #bcbcbc;
 	border-radius: 3px;
@@ -104,6 +106,7 @@ nav.nav-top {
 	}
 }
 
+//*-- 주문 정보(장바구니) --*//
 .order-info {
 	.col .col {
 		padding-left: 0 !important;
