--- a/less/write.less
+++ b/less/write.less
@@ -1,8 +1,63 @@
 @import (once) "var";
 
+html {
+	line-height: 1.2;
+}
 .top {
 	background-color: @primary;
 	color: white;
 	font-size: 1.3rem;
 	padding: 15px !important;
+}
+
+.section {
+	padding: 30px !important;
+
+	.divider {
+		height: 2px;
+		background-color: #666666;
+	}
+
+	table {
+		font-size: 16px;
+		border-collapse: separate;
+		padding: 0 10px;
+		
+		[data-field="id"] {
+			text-align: left;
+		}
+
+		[data-field="name"] {
+			text-align: center;
+		}
+
+		[data-field="price"] {
+			text-align: right;
+		}
+
+		td:nth-child(1){
+			text-align: left;
+		}
+		td:nth-child(2){
+			text-align: center;
+		}
+		td:nth-child(3){
+			text-align: right;
+		}
+
+		tr:last-child td {
+			color: @primary;
+			border-top: 1px solid #bcbcbc;
+			border-bottom: 2px solid #bcbcbc;
+		}
+	}
+
+	.cancel-btn {
+		height: 42px !important;
+		box-shadow: none !important;
+		background-color: #bcbcbc !important;
+		float: right;
+		margin: 20px 0;
+	}
+
 }
