--- a/less/write.less
+++ b/less/write.less
@@ -60,4 +60,28 @@ html {
 		margin: 20px 0;
 	}
 
+	.headline-info {
+		margin-bottom: 30px;
+	}
+	
+	.select-wrapper {
+		margin-bottom: 10px;
+
+		.text {
+			width: 16%;
+			font-weight: bold;
+			font-size: 16px;
+			line-height: 3rem;
+			padding: 0;
+			display: inline;
+			margin-right: 10px;
+		}
+		input {
+			width: 40%;
+			border:1px solid #bbb;
+			display: inline;
+			margin: 0 0 0 5px;
+		}
+	
+	}
 }
