--- a/less/index.less
+++ b/less/index.less
@@ -77,6 +77,14 @@ nav.nav-top {
 		height: auto;
 	}
 
+	#laundry .laundry-qty-container {
+		// border: 1px solid red;
+		position: absolute;
+		width: 100%;
+		line-height: 3rem;
+		text-align: center;
+	}
+
 	ul li .col .col {
 		padding-left: 0;
 	}
