--- a/less/index.less
+++ b/less/index.less
@@ -97,7 +97,8 @@ nav.nav-top {
 	display: block;
 	// float: right;
 	position: relative;
-	
+	right: -20px !important;
+
 	span {
 	  float: left;
 	  line-height: 1.5;
@@ -122,5 +123,6 @@ nav.nav-top {
 	button {
 		height: 42px !important;
 		box-shadow: none !important;
+		right: -20px !important;
 	}
 }
