--- a/css/complete.css
+++ b/css/complete.css
@@ -1,43 +1,47 @@
-.sp_container {
-  position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-}
 .bg_box {
-  /*height: 100%;*/
   position: relative;
   z-index: -1;
 }
 .bg_box .bg_img {
   width: 100%;
+  height: auto;
   background-size: cover;
 }
-.wrapper {
+.content-wrapper {
   position: absolute;
   text-align: center;
-  left: 50%;
-  top: 50%;
-  margin: -205px auto 0 -150px;
-  /* sp_content의 height와 width의 절반값 참고 */
-  width: 300px;
+  top: 15%;
+  left: 0;
+  right: 0;
 }
-.wrapper .sp_content {
+.content-wrapper .content {
   position: relative;
-  width: 300px;
-  height: 410px;
-  /*background-color: #eee;*/
   margin: 0 auto;
+  width: 90%;
 }
-.wrapper .sp_content .msg {
-  float: left;
-  width: 300px;
-  height: 110px;
+.content-wrapper .content img {
+  margin: 10px;
+  width: 25%;
+}
+.content-wrapper .content .title {
+  font-size: 2rem;
+  padding: 10px;
+}
+.content-wrapper .content p {
+  font-size: 1rem;
+  margin-bottom: 50px;
+}
+.content-wrapper .content .app-info {
+  font-size: 0.8rem;
+  margin: 20px;
+}
+.content-wrapper .content .app-btn {
+  width: 40%;
+  height: 50px;
+  color: black;
+  font-size: 1rem;
   margin: 0 auto;
-  text-align: center;
-  font-size: 3em;
-  color: red;
+  border: 1px solid black;
+  box-shadow: none !important;
+  background-color: rgba(255, 255, 255, 0) !important;
 }
