--- a/less/complete.less
+++ b/less/complete.less
@@ -1,73 +1,66 @@
 @import (once) "var";
 
-// .sp_body {
-// 	position: relative;
-// 	width: 100%;
-// 	height: 100%;
-// }
-
-.sp_container {
-	position: relative;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-}
-
  .bg_box {
-	// overflow: hidden;
-	// width: 100%;
-	/*height: 100%;*/
-	// left: 0;
-	// top: 0;
 	position: relative;
 	z-index: -1;
 
 	.bg_img {
 		width: 100%;
-		// height: 100%;
+		height: auto;
 		background-size: cover;
 	}
 }
 
-//  .sp_logo {
-// 	width: 150px;
-// 	height: 30px;
-// 	left: 40px;
-// 	top: 40px;
-// 	background: url("/images/ubuntudo_logo.png") no-repeat;
-// 	background-size: 100%;
-// 	position: absolute;
-// }
-
- .wrapper {
+ .content-wrapper {
 	position: absolute;
 	text-align: center;
-	left: 50%;
-	top: 50%;
-	margin: -205px auto 0 -150px; /* sp_content의 height와 width의 절반값 참고 */
-	width: 300px;
+	top: 15%;
+	left: 0;
+	right: 0;
+	// left: 50%;
+	// top: 50%;
+	// margin: -205px auto 0 -150px; /* content의 height와 width의 절반값 참고 */
+	// width: 300px;
 
-	 .sp_content {
+	 .content {
 		position: relative;
-		width: 300px;
-		height: 410px;
-		/*background-color: #eee;*/
 		margin: 0 auto;
+		width: 90%;
+		// width: 300px;
+		// height: 410px;
 
-		 .msg {
-			float: left;
-			width: 300px;
-			height: 110px;
+		img {
+			margin: 10px;
+			width: 25%;
+		}
+
+		.title {
+			font-size: 2rem;
+			padding: 10px;
+			// line-height: 1.3;
+		}
+		
+		p {
+			font-size: 1rem;
+			margin-bottom: 50px;
+		}
+		
+		.app-info {
+			font-size: 0.8rem;
+			margin: 20px;
+		}
+
+		.app-btn {
+			width: 40%;
+			height: 50px;
+			color: black;
+			font-size: 1rem;
 			margin: 0 auto;
-			text-align: center;
-			font-size: 3em;
-			color: red;
+			border: 1px solid black;
+			box-shadow: none !important;
+			background-color: rgba( 255, 255, 255, 0 ) !important;
 		}
 	}
-
 }
 
 
