--- a/less/trace.less
+++ b/less/trace.less
@@ -44,10 +44,36 @@
 			display: block;
 			width: 35%;
 			height: 45px;
+			line-height: 45px;
+			vertical-align: middle;
 			font-size: 1rem;
 			margin: 0 auto;
 			box-shadow: none !important;
+			background-color: @primary;
 		}
+	}
+}
+
+
+.modal {
+	max-width: 400px !important;
+	max-height: 100%;
+	overflow-y: auto; 
+
+	.close-btn {
+		width: 15px;
+		cursor: pointer;
+	}
+	
+	.caption {
+		font-weight: bold;
+	}
+
+	.modal-box {
+		padding: 30px;
+		position: relative;
+		top: 15px;
+	
 	}
 }
 
