--- a/less/write.less
+++ b/less/write.less
@@ -84,4 +84,11 @@ html {
 		}
 	
 	}
+
+	.input-wrapper {
+		input:focus{
+			border-bottom: 1px solid @primary !important;
+			box-shadow: 0 1px 0 0 @primary !important;		
+		}
+	}
 }
