--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+html {
+  font-family: 'Noto Sans KR', 'Roboto', sans-serif;
+}
 button {
   background-color: #5ddbdb !important;
 }
