--- a/less/index.less
+++ b/less/index.less
@@ -89,45 +89,66 @@ nav.nav-top {
 		line-height: 3rem;
 		text-align: center;					
 	}
+	
+	.item {
+		width: 68%;
+	
+		.col {
+			padding-left: 0;
+		}
+	}
+	
+	//*-- item quantity changer --*//
+	.qty-box {
+		width: 30%;
+		border: 1px solid #bcbcbc;
+		border-radius: 3px;
+		display: block;
+		// float: right;
+		position: relative;
+		// right: -20px !important;
 
-	ul li .col .col {
-		padding-left: 0;
+		span {
+		  float: left;
+		  line-height: 1.5;
+		  width: calc(100%/3);
+		}
+		.left-set {
+			text-align: left;
+		}
+		.center-set {
+			text-align: center;
+		}
+		.right-set {
+			text-align: right;
+		}
 	}
 }
 
-//*-- item quantity changer --*//
-.qty-box {
-	border: 1px solid #bcbcbc;
-	border-radius: 3px;
-	display: block;
-	// float: right;
-	position: relative;
-	right: -20px !important;
 
-	span {
-	  float: left;
-	  line-height: 1.5;
-	  width: calc(100%/3);
-	}
-	.left-set {
-		text-align: left;
-	}
-	.center-set {
-		text-align: center;
-	}
-	.right-set {
-		text-align: right;
-	}
-}
 
 //*-- 주문 정보(장바구니) --*//
 .order-info {
-	.col .col {
-		padding-left: 0 !important;
+	margin-bottom: 0;
+	padding: 15px;
+	position: fixed;
+	background-color: rgba( 255, 255, 255, 0.9);
+	width: 100%;
+	height: 72px;
+	bottom: 0;
+	z-index: 100;
+	border-top: 1px solid black;
+
+	.cart {
+		width: 68%;
+
+		.col {
+			padding-left: 0 !important;
+		}
 	}
-	button {
+	.cart-btn {
+		width: 32%;
 		height: 42px !important;
 		box-shadow: none !important;
-		right: -20px !important;
 	}
 }
