--- a/less/var.less
+++ b/less/var.less
@@ -2,3 +2,9 @@
 @secondary: #7dbfc6;
 @light-gray: #bcbcbc;
 @font-primary: #666666;
+
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+html {
+    font-family: 'Noto Sans KR', 'Roboto', sans-serif;    
+}
