--- a/css/write.css
+++ b/css/write.css
@@ -1,3 +1,7 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+html {
+  font-family: 'Noto Sans KR', 'Roboto', sans-serif;
+}
 html {
   line-height: 1.2;
 }
