--- a/less/trace.less
+++ b/less/trace.less
@@ -54,28 +54,107 @@
 	}
 }
 
-
+	
 .modal {
 	max-width: 400px !important;
 	max-height: 100%;
-	overflow-y: auto; 
+	overflow-y: auto;
+	border-radius: 8px; 
 
 	.close-btn {
 		width: 15px;
+		height: 15px;
+		position: absolute;
+		right: 24px;
 		cursor: pointer;
 	}
 	
 	.caption {
 		font-weight: bold;
+		padding: 25px 0;
 	}
 
-	.modal-box {
-		padding: 30px;
-		position: relative;
-		top: 15px;
+	img {
+		width: 20%;
+		margin: 10px auto;
+		display: block;
+	}
 	
+	.subtitle {
+		font-size: 2rem;
+		line-height: 35px;
+		font-weight: 200;
+		margin: 10px auto;
 	}
 }
+
+
+
+.progress_bar{
+	max-width: 29em;
+	width: 100%;
+	padding: 0 18px;
+	height: 2em;
+	margin: 0;
+	padding: 0;
+	font-size: 10px; /* change font size only to scale*/
+	li{
+	  width: 25%;
+	  float: left;
+	  height: 100%;
+	  list-style: none;
+	  position: relative;
+	  margin: 0;a
+	  padding: 0;
+	}
+
+	li span{
+	  position: absolute;
+	  display: block;
+	  top: 0;
+	  bottom: 0;
+	  left: 0;
+	  right: 0;
+	  margin: auto;
+	  background: #8ac148;
+	  height: .4em;
+	  z-index: 1;
+	}
+
+	li.activated:before{
+	  background: #fff;
+	  border: 0.3em solid #8ac148;
+	  box-sizing: border-box;
+	}
+
+
+	li:before{
+	    content: '';
+	    display: block;
+	    position: absolute;
+	    left: 0;
+	    top: 0;
+	    background: #8ac148;
+	    width: 2em;
+	    height: 2em;
+	    border-radius: 2em;
+	    z-index: 2;
+	}
+
+	li:last-child:after{
+	    content: '';
+	    display: block;
+	    position: absolute;
+	    right: -2em;
+	    top: 0;
+	    background: #8ac148;
+	    width: 2em;
+	    height: 2em;
+	    border-radius: 2em;
+	    z-index: 2;
+	}
+}
+
 
 
 
