--- a/less/index.less
+++ b/less/index.less
@@ -25,7 +25,7 @@ nav.nav-top {
 			font-size: 2.6rem;
 
 			img {
-				width: 150px;
+				width: 140px;
 			}
 		}
 
@@ -86,38 +86,44 @@ nav.nav-top {
 		text-align: center;					
 	}
 	
-	.item {
-		width: 68%;
-	
-		.col {
-			padding-left: 0;
-		}
-	}
-	
-	//*-- item quantity changer --*//
-	.qty-box {
-		width: 30%;
-		border: 1px solid #bcbcbc;
-		border-radius: 3px;
-		display: block;
-		// float: right;
-		position: relative;
-		// right: -20px !important;
+	.item-box li {
+		font-size: 16px;
+		margin: 20px 0;
 
-		span {
-		  float: left;
-		  line-height: 1.5;
-		  width: calc(100%/3);
+		.item {
+			width: 68%;
+		
+			.col {
+				padding-left: 0;
+			}
 		}
-		.left-set {
-			text-align: left;
+		
+		//*-- item quantity changer --*//
+		.qty-box {
+			width: 30%;
+			border: 1px solid #bcbcbc;
+			border-radius: 3px;
+			display: block;
+			// float: right;
+			position: relative;
+			// right: -20px !important;
+
+			span {
+			  float: left;
+			  line-height: 1.5;
+			  width: calc(100%/3);
+			}
+			.left-set {
+				text-align: left;
+			}
+			.center-set {
+				text-align: center;
+			}
+			.right-set {
+				text-align: right;
+			}
 		}
-		.center-set {
-			text-align: center;
-		}
-		.right-set {
-			text-align: right;
-		}
+		
 	}
 }
 
