--- a/css/index.css
+++ b/css/index.css
@@ -57,41 +57,41 @@ nav.nav-top .nav-wrapper a {
   width: 100%;
   height: auto;
 }
-.contents-container #laundry .laundry-qty-container {
+.contents-container #laundry .item-box-container {
   position: absolute;
   width: 100%;
   line-height: 3rem;
   text-align: center;
 }
-.contents-container .item-box li {
+.contents-container li.item-box {
   font-size: 16px;
   margin: 20px 0;
 }
-.contents-container .item-box li .item {
+.contents-container li.item-box .item {
   width: 68%;
 }
-.contents-container .item-box li .item .col {
+.contents-container li.item-box .item .col {
   padding-left: 0;
 }
-.contents-container .item-box li .qty-box {
+.contents-container .qty-box {
   width: 30%;
   border: 1px solid #bcbcbc;
   border-radius: 3px;
   display: block;
   position: relative;
 }
-.contents-container .item-box li .qty-box span {
+.contents-container .qty-box span {
   float: left;
   line-height: 1.5;
   width: calc(33.33333333%);
 }
-.contents-container .item-box li .qty-box .left-set {
+.contents-container .qty-box .left-set {
   text-align: left;
 }
-.contents-container .item-box li .qty-box .center-set {
+.contents-container .qty-box .center-set {
   text-align: center;
 }
-.contents-container .item-box li .qty-box .right-set {
+.contents-container .qty-box .right-set {
   text-align: right;
 }
 .order-info {
