--- a/css/write.css
+++ b/css/write.css
@@ -12,7 +12,7 @@ html {
   padding: 15px !important;
 }
 .section {
-  padding: 30px !important;
+  padding: 30px 30px 10px 30px !important;
 }
 .section .divider {
   height: 2px;
@@ -21,6 +21,7 @@ html {
 .section table {
   font-size: 16px;
   border-collapse: separate;
+  color: #666666;
   padding: 0 10px;
 }
 .section table [data-field="id"] {
@@ -49,9 +50,9 @@ html {
 .section .cancel-btn {
   height: 42px !important;
   box-shadow: none !important;
-  background-color: #bcbcbc !important;
+  background-color: #cccccc !important;
   float: right;
-  margin: 20px 0;
+  margin-top: 20px;
 }
 .section .headline-info {
   margin-bottom: 30px;
@@ -66,7 +67,6 @@ html {
   line-height: 3rem;
   padding: 0;
   display: inline;
-  margin-right: 10px;
 }
 .section .select-wrapper input {
   width: 40%;
@@ -77,4 +77,17 @@ html {
 .section .input-wrapper input:focus {
   border-bottom: 1px solid #5ddbdb !important;
   box-shadow: 0 1px 0 0 #5ddbdb !important;
+}
+.section .order-btn {
+  color: #5ddbdb;
+  background-color: transparent !important;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+  background-color: white;
+  padding: 12px 24px;
+  border: 2px solid #5ddbdb;
+  border-radius: 3px;
+  text-decoration: none;
+  margin: 30px 0;
 }
