--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,5 @@
 @import (once) "var";
 
-
 button {
 	background-color: @primary !important;
 }
@@ -45,12 +44,13 @@ nav.nav-top {
 //*-- 탭메뉴 --*//
 .tab-menu {
 	box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.02), 0 2px 10px 0 rgba(0, 0, 0, 0.05) !important;	
-	
+	height: 107px;
 	.tabs {
 		height: 100%;
 		
 		.tab {
 			height: 100%;
+			min-width: 85px;
 
 			a {
 				padding-top: 16px;
@@ -59,7 +59,7 @@ nav.nav-top {
 					display: block;
 					width: 30px;
 					height: 30px;
-					margin: 0 auto;
+					margin: 10px auto -5px auto;
 				}
 				.tab-img {
 					display: block;
@@ -69,7 +69,6 @@ nav.nav-top {
 				}
 				div {
 					color: @font-primary;
-					// font-size: 14px;
 				}
 			}
 
@@ -107,22 +106,27 @@ nav.nav-top {
 
 			.qty-box {
 				width:100px;
-				 left:50%;
-				 margin-left:-50px;
-				 position:absolute;
+				left:50%;
+				margin-left:-50px;
+				position:absolute;
+				span {
+					line-height: 1.7;
+				}
 			}	
 			.item-price {
-				line-height: 1.8;
+				line-height: 2.2;
+				color: @font-primary;
 			}			
 		}
 	}
 	
 	li.item-box {
 		font-size: 16px;
-		margin: 20px 0;
+		margin: 17px 0;
 
 		.item {
 			width: 68%;
+			line-height: 1.7;
 		
 			.col {
 				padding-left: 0;
@@ -142,7 +146,7 @@ nav.nav-top {
 
 		span {
 		  float: left;
-		  line-height: 1.5;
+		  line-height: 1.7;
 		  width: calc(100%/3);
 		}
 		.left-set {
@@ -178,6 +182,9 @@ nav.nav-top {
 
 		.col {
 			padding-left: 0 !important;
+			.total-number, .total-price {
+				font-weight: bold;
+			}
 		}
 	}
 	.cart-btn {
