--- a/less/write.less
+++ b/less/write.less
@@ -11,7 +11,7 @@ html {
 }
 
 .section {
-	padding: 30px !important;
+	padding: 30px 30px 10px 30px !important;
 
 	.divider {
 		height: 2px;
@@ -21,6 +21,7 @@ html {
 	table {
 		font-size: 16px;
 		border-collapse: separate;
+		color: @font-primary;
 		padding: 0 10px;
 		
 		[data-field="id"] {
@@ -55,9 +56,9 @@ html {
 	.cancel-btn {
 		height: 42px !important;
 		box-shadow: none !important;
-		background-color: #bcbcbc !important;
+		background-color: #cccccc !important;
 		float: right;
-		margin: 20px 0;
+		margin-top: 20px;
 	}
 
 	.headline-info {
@@ -74,7 +75,6 @@ html {
 			line-height: 3rem;
 			padding: 0;
 			display: inline;
-			margin-right: 10px;
 		}
 		input {
 			width: 40%;
@@ -91,4 +91,19 @@ html {
 			box-shadow: 0 1px 0 0 @primary !important;		
 		}
 	}
+
+	.order-btn {
+		color: @primary;
+		background-color: transparent !important; 
+		display: inline-block;
+		text-align: center;
+		cursor: pointer;
+		background-color: white;
+		padding: 12px 24px;
+		border: 2px solid @primary;
+		border-radius: 3px;
+		text-decoration: none;
+		margin: 30px 0;
+	}
 }
+ 
