--- a/css/complete.css
+++ b/css/complete.css
@@ -24,28 +24,40 @@ html {
   width: 90%;
 }
 .content-wrapper .content img {
-  margin: 10px;
-  width: 25%;
+  margin-top: 50px;
+  width: 20.5%;
 }
 .content-wrapper .content .title {
-  font-size: 2rem;
-  padding: 10px;
+  margin: 20px 0;
+  font-size: 2.3em;
+  font-weight: lighter;
+  line-height: 1.2;
+  color: #394646;
 }
 .content-wrapper .content p {
-  font-size: 1rem;
-  margin-bottom: 50px;
+  font-size: 0.8em;
+  font-weight: 500;
+  line-height: 1.6;
+  margin-bottom: 35px;
+  color: #646464;
+}
+.content-wrapper .content .divider {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .content-wrapper .content .app-info {
-  font-size: 0.8rem;
-  margin: 20px;
+  font-size: 0.7em;
+  font-weight: 500;
+  margin: 20px 0;
 }
 .content-wrapper .content .app-btn {
-  width: 40%;
-  height: 50px;
-  color: black;
-  font-size: 1rem;
+  width: 37%;
+  height: 43px;
+  color: #394646;
+  font-size: 0.9em;
+  font-weight: 500;
   margin: 0 auto;
-  border: 1px solid black;
+  padding: 0;
+  border: 1px solid #394646;
   box-shadow: none !important;
   background-color: rgba(255, 255, 255, 0) !important;
 }
