--- a/less/complete.less
+++ b/less/complete.less
@@ -30,33 +30,45 @@
 		// height: 410px;
 
 		img {
-			margin: 10px;
-			width: 25%;
+			margin-top: 50px;
+			width: 20.5%;
 		}
 
 		.title {
-			font-size: 2rem;
-			padding: 10px;
-			// line-height: 1.3;
+			margin: 20px 0;
+			font-size: 2.3em;
+			font-weight: lighter;
+			line-height: 1.2;
+			color: #394646;
 		}
 		
 		p {
-			font-size: 1rem;
-			margin-bottom: 50px;
+			font-size: 0.8em;
+			font-weight: 500;
+			line-height: 1.6;
+			margin-bottom: 35px;
+			color: #646464;
 		}
 		
+		.divider {
+			background-color: rgba(0,0,0,0.2);
+		}
+
 		.app-info {
-			font-size: 0.8rem;
-			margin: 20px;
+			font-size: 0.7em;
+			font-weight: 500;
+			margin: 20px 0;
 		}
 
 		.app-btn {
-			width: 40%;
-			height: 50px;
-			color: black;
-			font-size: 1rem;
+			width: 37%;
+			height: 43px;
+			color: #394646;
+			font-size: 0.9em;
+			font-weight: 500;
 			margin: 0 auto;
-			border: 1px solid black;
+			padding: 0;
+			border: 1px solid #394646;
 			box-shadow: none !important;
 			background-color: rgba( 255, 255, 255, 0 ) !important;
 		}
