--- a/less/index.less
+++ b/less/index.less
@@ -17,6 +17,7 @@ button {
 //*-- 상단바 --*//
 nav.nav-top {
     background-color: #fff;
+    // background-color: red;
     box-shadow: none !important;
   
   	.nav-wrapper {
