--- a/css/trace.css
+++ b/css/trace.css
@@ -24,17 +24,29 @@ html {
   width: 90%;
 }
 .content-wrapper .content .title {
-  font-size: 2rem;
-  padding: 10px;
+  margin: 15px 0;
+  font-size: 2.3em;
+  font-weight: lighter;
+  line-height: 1.2;
+  color: #394646;
 }
 .content-wrapper .content p {
-  font-size: 1rem;
+  font-size: 0.8em;
+  font-weight: 500;
+  line-height: 1.6;
+  color: #646464;
 }
 .content-wrapper .content input {
-  width: 70%;
+  width: 65%;
+  height: 40px;
+  font-size: 0.9em;
   border: 1px solid #bbb;
   background-color: #fff;
   padding-left: 15px;
+}
+.content-wrapper .content input:focus {
+  border-bottom: 1px solid #bbb;
+  box-shadow: none;
 }
 .content-wrapper .content .trace-btn {
   display: block;
@@ -44,6 +56,7 @@ html {
   vertical-align: middle;
   font-size: 1rem;
   margin: 0 auto;
+  padding: 0;
   box-shadow: none !important;
   background-color: #5ddbdb;
 }
@@ -51,33 +64,35 @@ html {
   max-width: 400px !important;
   max-height: 100%;
   overflow-y: auto;
-  border-radius: 8px;
+  border-radius: 5px;
 }
 .modal .close-btn {
-  width: 15px;
-  height: 15px;
+  font-size: 1.3em;
   position: absolute;
-  right: 24px;
+  right: 18px;
+  top: 18px;
   cursor: pointer;
 }
 .modal .caption {
-  font-weight: bold;
-  padding: 25px 0;
+  font-weight: 500;
+  padding: 15px 0;
 }
 .modal img {
-  width: 20%;
-  margin: 10px auto;
+  width: 18%;
+  margin: 15px auto;
   display: block;
 }
 .modal .subtitle {
-  font-size: 2rem;
-  line-height: 35px;
-  font-weight: 200;
-  margin: 20px auto;
+  margin: 20px 0;
+  font-size: 2em;
+  font-weight: lighter;
+  line-height: 1.2;
+  color: #394646;
 }
 .modal .progress-bar {
   box-sizing: border-box;
-  margin: 30px auto;
+  margin-top: 12%;
+  margin-bottom: 6%;
   width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
@@ -112,8 +127,9 @@ html {
   display: block;
 }
 .modal .progress-bar .step .progress-name {
-  font-weight: 200;
-  color: #585858;
+  font-weight: 400;
+  color: #394646;
+  font-size: 0.8em;
   line-height: 16px;
   margin-top: 10px;
 }
@@ -135,16 +151,21 @@ html {
   margin-right: -5px;
 }
 .modal .divider {
-  margin: 0 -30px;
+  margin: 0 -25px;
 }
 .modal .my-order-info {
   font-size: 12px;
-  margin-top: 14px;
-  margin-bottom: -10px;
+  line-height: 1.2;
+  margin-top: 12px;
+  margin-bottom: -5px;
 }
 .modal .my-order-info td {
-  padding: 10px 5px;
+  vertical-align: top;
 }
 .modal .my-order-info td:nth-child(1) {
+  width: 28%;
   font-weight: bold;
+}
+.modal .my-order-info td:nth-child(2) {
+  font-weight: 300;
 }
