--- a/less/trace.less
+++ b/less/trace.less
@@ -24,20 +24,31 @@
 		width: 90%;
 
 		.title {
-			font-size: 2rem;
-			padding: 10px;
-			// line-height: 1.3;
+			margin: 15px 0;
+			font-size: 2.3em;
+			font-weight: lighter;
+			line-height: 1.2;
+			color: #394646;
 		}
 		
 		p {
-			font-size: 1rem;
+			font-size: 0.8em;
+			font-weight: 500;
+			line-height: 1.6;
+			color: #646464;
 		}
 		
 		input {
-			width: 70%;
+			width: 65%;
+			height: 40px;
+			font-size: 0.9em;
 			border:1px solid #bbb;
 			background-color: #fff;
 			padding-left: 15px;
+		}
+		input:focus{
+			border-bottom: 1px solid #bbb;
+			box-shadow: none;
 		}
 
 		.trace-btn {
@@ -48,6 +59,7 @@
 			vertical-align: middle;
 			font-size: 1rem;
 			margin: 0 auto;
+			padding: 0;
 			box-shadow: none !important;
 			background-color: @primary;
 		}
@@ -57,40 +69,44 @@
 	
 .modal {
 	max-width: 400px !important;
+	// width: 80%;
 	max-height: 100%;
 	overflow-y: auto;
-	border-radius: 8px; 
+	border-radius: 5px; 
 
 	.close-btn {
-		width: 15px;
-		height: 15px;
+		font-size: 1.3em;
 		position: absolute;
-		right: 24px;
+		right: 18px;
+		top: 18px;
 		cursor: pointer;
 	}
 	
 	.caption {
-		font-weight: bold;
-		padding: 25px 0;
+		font-weight: 500;
+		padding: 15px 0;
 	}
 
 	img {
-		width: 20%;
-		margin: 10px auto;
+		width: 18%;
+		margin: 15px auto;
 		display: block;
 	}
 	
 	.subtitle {
-		font-size: 2rem;
-		line-height: 35px;
-		font-weight: 200;
-		margin: 20px auto;
+		margin: 20px 0;
+		font-size: 2em;
+		font-weight: lighter;
+		line-height: 1.2;
+		color: #394646;
 	}
 
 	.progress-bar {
 		box-sizing: border-box;
-		// margin-top: 20px;
-		margin: 30px auto;
+		// margin-top: 30px;
+		// margin-bottom: 25px;
+		margin-top: 12%;
+		margin-bottom: 6%;
 	    width: 100%;
 	    display: -webkit-box;
 	    display: -webkit-flex;
@@ -127,8 +143,9 @@
 			}
 
 			.progress-name {
-				font-weight: 200;
-				color: #585858;
+				font-weight: 400;
+				color: #394646;
+				font-size: 0.8em;
 				line-height: 16px;
 				margin-top: 10px;
 			}
@@ -154,19 +171,26 @@
 	}
 
 	.divider {
-		margin: 0 -30px;
+		margin: 0 -25px;
 	}
 
 	.my-order-info {
+		// overflow: auto;
 		font-size: 12px;
-		margin-top: 14px;
-		margin-bottom: -10px;
+		line-height: 1.2;
+		margin-top: 12px;
+		margin-bottom: -5px;
 
 		td {
-			padding: 10px 5px;
+			vertical-align: top;
 		}
 		td:nth-child(1){
+			width: 28%;
 			font-weight: bold;
+		}
+
+		td:nth-child(2){
+			font-weight: 300;
 		}
 	}
 }
