--- a/less/write.less
+++ b/less/write.less
@@ -76,13 +76,12 @@ html {
 			padding: 0;
 			display: inline;
 		}
-		input {
+		input, select {
 			width: 40%;
 			border:1px solid #bbb;
 			display: inline;
 			margin: 0 0 0 5px;
 		}
-	
 	}
 
 	.input-wrapper {
