--- a/less/write.less
+++ b/less/write.less
@@ -49,10 +49,16 @@ html {
 		tr:last-child td {
 			color: @primary;
 			border-top: 1px solid #bcbcbc;
-			border-bottom: 2px solid #bcbcbc;
+			// border-bottom: 2px solid #bcbcbc;
 		}
 	}
-
+	
+	.gray {
+		border: 1px solid #bcbcbc;
+	}
+	p {
+		font-size: 0.8em;
+	}
 	.cancel-btn {
 		height: 42px !important;
 		box-shadow: none !important;
