--- a/less/write.less
+++ b/less/write.less
@@ -83,6 +83,7 @@ html {
 			display: inline;
 		}
 		input, select {
+			font-size: 0.9em;
 			width: 40%;
 			border:1px solid #bbb;
 			display: inline;
@@ -91,10 +92,47 @@ html {
 	}
 
 	.input-wrapper {
+		input {
+			color: @font-primary;
+			border-bottom: 1px solid #9e9e9e;
+		}
 		input:focus{
 			border-bottom: 1px solid @primary !important;
 			box-shadow: 0 1px 0 0 @primary !important;		
 		}
+	}
+	
+	[type="checkbox"].filled-in:not(:checked)+label:after {
+	    height: 15px;
+	    width: 15px;
+	    background-color: transparent;
+	    border: 2px solid #5a5a5a;
+	    top: 0px;
+	    z-index: 0;
+	}
+
+	[type="checkbox"].filled-in:checked+label:after {
+	    top: 0;
+	    width: 15px;
+	    height: 15px;
+	    border: 2px solid #26a69a;
+	    background-color: @primary;
+	    z-index: 0;
+	}
+	[type="checkbox"].filled-in:checked+label:before {
+		left: 2px;	
+		width: 5px;
+		height: 9px;
+	}
+
+	.checkbox-text {
+		font-size: 0.8em !important;
+		line-height: 1rem;
+		padding-left: 25px;
+	}
+
+	a{
+		color: @primary;
 	}
 
 	.order-btn {
@@ -109,6 +147,11 @@ html {
 		border-radius: 3px;
 		text-decoration: none;
 		margin: 30px 0;
+	}
+	button[disabled] {
+		color: @light-gray;
+		border: 2px solid @light-gray;
+
 	}
 }
  
